[package]
name = "dating_dapp"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
# solana-program = "2.0.10"
solana-program = "=2.0.10"


[dev-dependencies]
solana-program-test = "2.0.10"
solana-sdk = "2.0.10"

[lib]
name = "dating_dapp"
crate-type = ["cdylib", "lib"]
